--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,7 +59,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+      - assets/food1.jpg
+      - assets/food2.jpg
+      - assets/food3.jpg
+      - assets/food4.jpg
+      - assets/snack1.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
